tox: use wheel to install dependencies (close #140)

--- a/buildouts/tester.cfg
+++ b/buildouts/tester.cfg
@@ -6,6 +6,7 @@ develop+= tools/constants
           tools/discover.python
           tools/discover.lxml
 parts+= tox-ini
+        wheelhouse
         install-lxml-py25
 	install-lxml-py26
 	install-lxml-py27
@@ -79,6 +80,10 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/install-lxml.py.in
 output = ${buildout:directory}/bin/install-lxml-pypy.py
 lxml-location=${python27-lxml:location}
+
+[wheelhouse]
+recipe = z3c.recipe.mkdir
+paths=wheelhouse
 
 [tox]
 recipe = zc.recipe.egg
