--- a/tox.ini.in
+++ b/tox.ini.in
@@ -4,12 +4,13 @@ setupdir={toxinidir}
 envlist = py26,py27,pypy
 
 [testenv]
-deps=nose
-     coverage
 commands=
 	{envpython} {toxinidir}/misc/cleanup-pyc.py {toxinidir}/pyhwp {toxinidir}/pyhwp_uno {toxinidir}/unokit
 	{envpython} {toxinidir}/misc/mkdir.py {envtmpdir}
-	{envpython} {toxinidir}/bin/install-lxml-{envname}.py {envtmpdir}
+	{envbindir}/pip install -f {toxinidir}/wheelhouse wheel
+	{envbindir}/pip wheel -f {toxinidir}/wheelhouse --use-wheel --wheel-dir={toxinidir}/wheelhouse wheel nose coverage
+	{envbindir}/pip wheel -f {toxinidir}/wheelhouse --use-wheel --wheel-dir={toxinidir}/wheelhouse lxml  # TODO: win32
+	{envbindir}/pip install -f {toxinidir}/wheelhouse lxml nose coverage
 	{envbindir}/coverage run -p --source=hwp5,hwp5_tests {envbindir}/nosetests${constants:script_py_suffix} -v -w {envtmpdir} {toxinidir}/pyhwp-tests --logging-config={toxinidir}/etc/testlog.conf --with-xunit --xunit-file={envtmpdir}/nosetests.xml
 	{envpython} {toxinidir}/misc/test-cli.py
 	{envpython} {toxinidir}/misc/prepare-hwp5-xsl-fixtures.py --fixtures-dir={toxinidir}/pyhwp-tests/hwp5_tests/fixtures --out-dir={envtmpdir}/hwp5_xsl_fixtures
