distdoc: support cp25/jy25

--- a/buildouts/tester.cfg
+++ b/buildouts/tester.cfg
@@ -120,6 +120,7 @@ input = inline:
 	${:envpython} ${:toxinidir}/misc/mkdir.py ${:envtmpdir}
 
         ${:envbindir}/pip install nose coverage
+        ${:install-crypto}
         ${:install-lxml}
         
 	${:envbindir}/coverage run -p ${:coverage-options} ${:envbindir}/nosetests${constants:script_py_suffix} -v -w ${:envtmpdir} ${:toxinidir}/pyhwp-tests --logging-config=${:toxinidir}/etc/testlog.conf --with-xunit --xunit-file=${:envtmpdir}/nosetests.xml
@@ -139,6 +140,7 @@ toxinidir=${buildout:directory}
 
 environment-variables=
 install-lxml=
+install-crypto=
 coverage-options=--source=hwp5,hwp5_tests 
 
 
@@ -149,6 +151,9 @@ mkvenv=${mkvenv-CPython-2.5:output}
 install-lxml=[ -e ${:lxml-built} ] && tar -C ${:site-packages} -xzf ${:lxml-built} || ${:envbindir}/pip install lxml && tar -C ${:site-packages} -czf ${:lxml-built} lxml
 site-packages=${:envdir}/lib/python2.5/site-packages
 lxml-built=${buildout:parts-directory}/tox-py25-lxml-built.tar.gz
+
+install-crypto=[ -e ${:pycrypto-built} ] && tar -C ${:site-packages} -xzf ${:pycrypto-built} || ${:envbindir}/pip install pycrypo && tar -C ${:site-packages} -czf ${:pycrypto-built} Crypto
+pycrypto-built=${buildout:parts-directory}/tox-py25-pycrypto-built.tar.gz
 
 [tox-jy25]
 <=tox-shim
