--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,4 @@ include pyhwp/hwp5/xsl/*.xsl
 include pyhwp/hwp5/xsl/odt/*
 include pyhwp/hwp5/odf-relaxng/OpenDocument-v1.2-os-*.rng
 include VERSION.txt
+include CHANGES
