buildout: collect-samples

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -15,6 +15,7 @@ parts+= test-core
 	test-for-bisect
         xsltest
         code-analysis
+        collect-samples
 
 [pyhwp]
 eggs+= nose
@@ -82,3 +83,60 @@ directory = ${buildout:directory}/pyhwp
 flake8-max-complexity = 30
 
 utf8-header = True
+
+[collect-samples]
+recipe = collective.recipe.template
+mode = 755
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       dir="$1"
+       find "$dir" -iname '*.hwp' -print0 | parallel -0 "${save-sample:output}"
+
+[save-sample]
+recipe = collective.recipe.template
+mode = 755
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       src="$1"
+
+       [ -e "$src" ] || (echo "$src not found"; exit 1)
+
+       ${:abspath}
+
+       version=$(${buildout:bin-directory}/hwp5proc version "$src")
+       srcpath=$(abspath "$src")
+       sha1sum=$(sha1sum -b "$srcpath" | awk '{ print $1 }')
+
+       echo "$version/$sha1sum $srcpath"
+
+       repo="${buildout:directory}/samples.local"
+
+       blob_dir="${buildout:directory}/samples.local/blob"
+       [ -d "$blob_dir" ] || mkdir -p "$blob_dir"
+
+       blob_path="$blob_dir/$sha1sum"
+       [ -e "$blob_path" ] || cp "$srcpath" "$blob_path"
+
+       dst_path="$repo/$version/$sha1sum.hwp"
+       dst_dir=$(dirname "$dst_path")
+       [ -d "$dst_dir" ] || mkdir -p "$dst_dir"
+       [ -e $dst_path ] || ln -s "$blob_path" "$dst_path"
+
+abspath=
+       abspath() {
+              if [ $(echo "$1" | head -c 1) = "/" ]; then
+                     echo "$1"
+              else
+                     echo "$PWD/$1"
+              fi
+       }
