--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -16,6 +16,7 @@ parts+= test-core
         xsltest
         code-analysis
         collect-samples
+        masstest-failed
 
 [pyhwp]
 eggs+= nose
@@ -140,3 +141,84 @@ abspath=
                      echo "$PWD/$1"
               fi
        }
+
+[masstest-failed]
+recipe = collective.recipe.template
+mode = 755
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       ${masstest:output} "${masstest-worker:failed-dir}"
+
+[masstest]
+recipe = collective.recipe.template
+mode = 755
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       ${:def-masstest}
+
+       sample_dir="${buildout:directory}/samples.local/"
+       [ -z "$1" ] || sample_dir="$1"
+
+       masstest "$sample_dir" | tee ${buildout:parts-directory}/masstest.log
+
+def-masstest=
+       masstest() {
+              find "$1" -iname '*.hwp' -print0 | parallel -0 ${masstest-worker:output}
+       }
+
+[masstest-worker]
+recipe = collective.recipe.template
+mode = 755
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       [ -e "$1" ] || (echo "$1: not found"; exit 1)
+       testee="$1"
+
+       failed_dir="${:failed-dir}"
+       [ -d "$failed_dir" ] || mkdir -p "$failed_dir"
+
+       errors_dir="${:errors-dir}"
+       [ -d "$errors_dir" ] || mkdir -p "$errors_dir"
+
+       testee_filename=$(basename "$testee")
+       testee_error_hwp5proc="$errors_dir/$testee_filename.hwp5proc.err"
+       testee_error_xmllint="$errors_dir/$testee_filename.xmllint.err"
+
+       test_xml() {
+              ${buildout:bin-directory}/hwp5proc xml "$testee" 2> "$testee_error_hwp5proc" | xmllint --format - > /dev/null 2> "$testee_error_xmllint"
+       }
+
+       handle_success() {
+              echo ""
+              filename=$(basename "$testee")
+              failed_path="$failed_dir/$filename"
+              [ ! -e "$failed_path" ] || rm -f "$failed_path"
+              rm -f "$testee_error_hwp5proc"
+              rm -f "$testee_error_xmllint"
+       }
+
+       handle_failed() {
+              echo " FAILED"
+              [ -e "$failed_path" ] || ln -s "$testee" "$failed_dir"
+       }
+
+       echo -n "$testee"
+       test_xml && handle_success || handle_failed
+
+failed-dir=${buildout:parts-directory}/masstest/failed
+errors-dir=${buildout:parts-directory}/masstest/errors
