buildout: expected-output-update

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -17,6 +17,7 @@ parts+= test-core
         code-analysis
         collect-samples
         masstest-failed
+        expected-output-update
 
 [pyhwp]
 eggs+= nose
@@ -222,3 +223,61 @@ input =
 
 failed-dir=${buildout:parts-directory}/masstest/failed
 errors-dir=${buildout:parts-directory}/masstest/errors
+
+
+[expected-output-update]
+recipe = collective.recipe.template
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+mode = 755
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       samples='${buildout:directory}/samples'
+       find "$samples/" -iname '*.hwp' | parallel --gnu ${expected-output-update-worker:output}
+
+[expected-output-update-worker]
+recipe = collective.recipe.template
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+mode = 755
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       filename=$1
+       docinfo="$filename.docinfo.json"
+       section0="$filename.bodytext.section0.json"
+       xmlformat="$filename.formatted.xml"
+
+       hwp5proc_xml() {
+              ${buildout:bin-directory}/hwp5proc xml "$1" 2> "$xmlformat.err"
+       }
+
+       xml_c14n() {
+              xmllint --c14n --encode utf-8 - 2> "$xmlformat.c14n.err"
+       }
+       xml_format() {
+              xmllint --format --encode utf-8 - 2> "$xmlformat.format.err"
+       }
+
+       if ${buildout:bin-directory}/hwp5proc header "$filename" | grep password | grep 0 > /dev/null; then
+              dummy=''
+       else
+              echo "$filename: SKIPPING"
+              rm -f "$docinfo.err"
+              rm -f "$section0.err"
+              rm -f "$xmlformat.err"
+              rm -f "$xmlformat.c14n.err"
+              rm -f "$xmlformat.format.err"
+              exit 0
+       fi
+
+       ${buildout:bin-directory}/hwp5proc models "$filename" docinfo > "$docinfo" 2> "$docinfo.err" && echo "$filename: docinfo" && rm -f "$docinfo.err"
+
+       ${buildout:bin-directory}/hwp5proc models "$filename" bodytext/0 > "$section0" 2> "$section0.err" && echo "$filename: bodytext/0" && rm -f "$section0.err"
+
+       hwp5proc_xml "$filename" | xml_c14n | xml_format > "$xmlformat" && echo "$filename: xml" && rm -f "$xmlformat.err" "$xmlformat.c14n.err" "$xmlformat.format.err"
