buildout: explicitly use --gnu for parallel

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -96,7 +96,7 @@ input =
        set -e
 
        dir="$1"
-       find "$dir" -iname '*.hwp' -print0 | parallel -0 "${save-sample:output}"
+       find "$dir" -iname '*.hwp' -print0 | parallel --gnu -0 "${save-sample:output}"
 
 [save-sample]
 recipe = collective.recipe.template
@@ -173,7 +173,7 @@ input =
 
 def-masstest=
        masstest() {
-              find "$1" -iname '*.hwp' -print0 | parallel -0 ${masstest-worker:output}
+              find "$1" -iname '*.hwp' -print0 | parallel --gnu -0 ${masstest-worker:output}
        }
 
 [masstest-worker]
