buildout: massfind-unknowntag

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -17,6 +17,7 @@ parts+= test-core
         code-analysis
         collect-samples
         masstest-failed
+        massfind-unknowntag
         expected-output-update
 
 [pyhwp]
@@ -223,6 +224,20 @@ input =
 
 failed-dir=${buildout:parts-directory}/masstest/failed
 errors-dir=${buildout:parts-directory}/masstest/errors
+
+
+[massfind-unknowntag]
+recipe = collective.recipe.template
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+mode = 755
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       samples='${buildout:directory}/samples.local'
+       find "$samples/" -iname '*.hwp' | parallel --gnu ${buildout:bin-directory}/hwp5proc find --model=UnknownTagModel | tee ${buildout:parts-directory}/massfind-unknowntag
 
 
 [expected-output-update]
