buildout: massfind-incomplete

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -18,6 +18,7 @@ parts+= test-core
         collect-samples
         masstest-failed
         massfind-unknowntag
+        massfind-incomplete
         expected-output-update
 
 [pyhwp]
@@ -238,6 +239,20 @@ input =
 
        samples='${buildout:directory}/samples.local'
        find "$samples/" -iname '*.hwp' | parallel --gnu ${buildout:bin-directory}/hwp5proc find --model=UnknownTagModel | tee ${buildout:parts-directory}/massfind-unknowntag
+
+
+[massfind-incomplete]
+recipe = collective.recipe.template
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+mode = 755
+input =
+       inline:
+       #!/bin/sh
+
+       set -e
+
+       samples='${buildout:directory}/samples.local'
+       find "$samples/" -iname '*.hwp' | parallel --gnu ${buildout:bin-directory}/hwp5proc find --incomplete | tee ${buildout:parts-directory}/massfind-incomplete
 
 
 [expected-output-update]
