docs: generate pdf documentation (with latex + ko.tex)

--- a/buildouts/translator.cfg
+++ b/buildouts/translator.cfg
@@ -2,6 +2,7 @@
 extends = user.cfg
 parts+= docs-update-po
 	docs-build
+	docs-build-latex
 
 [pyhwp]
 eggs+= sphinx
@@ -81,3 +82,44 @@ input=inline:
       
       cp -r $EN_DIR $BUILD_DIR/docs	# en becomes docs/
       cp -r $KO_DIR $BUILD_DIR/docs/	# ko becomes docs/ko
+
+[docs-build-latex]
+recipe = collective.recipe.template
+output = ${buildout:bin-directory}/${:_buildout_section_name_}
+mode = 755
+input =
+	inline:
+	#!/bin/sh
+
+	# exit if any statement returns non-true return value
+	set -e
+
+	# exit on uninitialized variable
+	set -u
+
+	SRC_DIR=${buildout:directory}/docs
+	PO_BASE=${buildout:directory}/docs/translated
+	LATEX_BASE=${buildout:directory}/docs/.build/latex
+	DIST_DIR=${buildout:directory}/dist
+
+	cd ${buildout:directory}
+
+	for LANG in ko en; do
+		for FILE in index intro hwp5proc converters; do
+			PO_FILE=$PO_BASE/$LANG/LC_MESSAGES/$FILE.po
+			MO_FILE=$PO_BASE/$LANG/LC_MESSAGES/$FILE.mo
+			echo $MO_FILE
+			msgfmt $PO_FILE -o $MO_FILE
+		done
+		OUT_DIR=$LATEX_BASE/$LANG
+		echo $OUT_DIR
+		# sphinx does not detect changes in .mo files
+		# see https://bitbucket.org/birkenfeld/sphinx/issue/830
+		rm -rf $OUT_DIR
+		${buildout:directory}/bin/sphinx-build -b latex -Dlanguage=$LANG $SRC_DIR $OUT_DIR
+		make -C $OUT_DIR
+	done
+
+
+	cp $LATEX_BASE/en/pyhwp.pdf $DIST_DIR/pyhwp.en.pdf
+	cp $LATEX_BASE/ko/pyhwp.pdf $DIST_DIR/pyhwp.ko.pdf
