develop: fix MANIFEST.in (check-manifest)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,18 +1,36 @@
-include ez_setup.py
+include CHANGES
 include COPYING
+include LICENSE
+include Makefile
+include VERSION.txt
+include README
+include README.rst
+include classifiers.txt
+include ez_setup.py
+include pyhwp/README.rst
 include pyhwp/hwp5/COPYING
 include pyhwp/hwp5/README
 include pyhwp/hwp5/VERSION.txt
 include pyhwp/hwp5/xsl/*.xsl
 include pyhwp/hwp5/xsl/odt/*
-include pyhwp/hwp5/odf-relaxng/OpenDocument-v1.2-os-*.rng
-include VERSION.txt
-include CHANGES
-include classifiers.txt
 include requirements.in
 include requirements.txt
 include requirements-dev.in
 include requirements-dev.txt
 include requirements-test.in
 include requirements-test.txt
-include Makefile
+exclude samples
+include stdeb.cfg
+include tox.ini.in
+prune buildouts
+prune docs
+prune etc
+prune misc
+prune oxt
+prune pyhwp-tests
+prune release-hooks
+prune tools
+prune unokit
+prune pyhwp/hwp5/odf-relaxng
+include pyhwp/hwp5/odf-relaxng/OpenDocument-v1.2-os-*.rng
+prune pyhwp_uno
