--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,4 +9,10 @@ include pyhwp/hwp5/odf-relaxng/OpenDocument-v1.2-os-*.rng
 include VERSION.txt
 include CHANGES
 include classifiers.txt
-include requirement.txt
+include requirements.in
+include requirements.txt
+include requirements-dev.in
+include requirements-dev.txt
+include requirements-test.in
+include requirements-test.txt
+include Makefile
