develop: tox lint

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = docs,packaging,py27,pypy,jy27
+envlist = docs,lint,py27,pypy,jy27
 
 [testenv]
 deps =
@@ -29,12 +29,13 @@ whitelist_externals =
 commands =
 	make -C docs html latexpdf
 
-
-[testenv:packaging]
+[testenv:lint]
 changedir = {toxinidir}
 deps =
+	flake8
 	check-manifest
 	pyroma
 commands =
 	check-manifest
 	pyroma .
+	flake8 pyhwp
