--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,11 @@ deps =
 changedir = {envdir}
 commands =
 	zope-testrunner -vv --color --path={toxinidir}/pyhwp-tests --test-path={toxinidir}/pyhwp-tests --tests-pattern='^hwp5_tests$'
-	/bin/sh {toxinidir}/pyhwp-tests/hwp5_cli_tests.sh {toxinidir}/pyhwp-tests/hwp5_tests/fixtures
+	ln -sf {toxinidir}/samples
+	{toxinidir}/bin/clitest --prefix 3 {toxinidir}/pyhwp-tests/cli_tests/hwp5proc.txt
+	{toxinidir}/bin/clitest --prefix 3 {toxinidir}/pyhwp-tests/cli_tests/hwp5odt.txt
+whitelist_externals =
+	ln
 
 [testenv:pypy]
 deps =
