--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
   - "pypy"
 install:
-  - pip install tox-travis
+  - pip install buildout tox-travis
+  - buildout
 script:
   - tox
