--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,14 @@ language: python
 python:
   - "2.7"
   - "pypy"
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libxml2-utils xsltproc
 install:
   - pip install -U setuptools pip wheel
   - pip install -U zc.buildout tox tox-travis
   - buildout
   - tox --version
+  - sort --version
 script:
   - tox
