requirements-dev: jip 0.9.13

--- a/.gitignore
+++ b/.gitignore
@@ -9,15 +9,19 @@
 /*.egg
 /.eggs
 /.installed.cfg
+/.jip
+/.jip_index
 /.tox
 /bin
 /build
 /develop-eggs
+/data/pom.tpl
 /dist
 /docs/.build
 /downloads
 /eggs
 /include
+/javalib
 /lib
 /local
 /oxt/pyhwp.egg.record
