--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
 	-r{toxinidir}/requirements-test.txt
 
 [testenv:jy27]
-basepython = jython2.7
+basepython = {toxinidir}/parts/jython2.7/bin/jython
 deps =
 	-r{toxinidir}/requirements-test.txt
 
