--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
+python:
+- "2.7"
 env:
+- TOXENV=py27
 matrix:
   include:
     - python: "2.7"
       env: TOXENV=lint
-    - python: "2.7"
-      env: TOXENV=docs
     - python: "2.7"
       env: TOXENV=py27
     - python: "pypy"
