--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,7 @@ changedir = {envdir}
 commands =
 	zope-testrunner -vv --color --path={toxinidir}/pyhwp-tests --test-path={toxinidir}/pyhwp-tests --tests-pattern='^hwp5_tests$'
 	ln -sf {toxinidir}/samples
-	{toxinidir}/bin/clitest --prefix 3 {toxinidir}/pyhwp-tests/cli_tests/hwp5proc.txt
-	{toxinidir}/bin/clitest --prefix 3 {toxinidir}/pyhwp-tests/cli_tests/hwp5odt.txt
+	{toxinidir}/bin/clitest --prefix 3 {toxinidir}/pyhwp-tests/cli_tests/hwp5proc.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5odt.txt
 whitelist_externals =
 	ln
 
