--- a/tox.ini
+++ b/tox.ini
@@ -35,9 +35,7 @@ commands =
 [testenv:lint]
 changedir = {toxinidir}
 deps =
-	flake8
-	check-manifest
-	pyroma
+	-r{toxinidir}/requirements/lint.txt
 commands =
 	check-manifest
 	pyroma .
