--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = docs,lint,py27,pypy,jy27
 
 [testenv]
 deps =
-	-r{toxinidir}/requirements-test.txt
+	-r{toxinidir}/requirements/test.txt
 	lxml
 	pycrypto
 changedir = {envdir}
@@ -16,17 +16,17 @@ whitelist_externals =
 
 [testenv:pypy]
 deps =
-	-r{toxinidir}/requirements-test.txt
+	-r{toxinidir}/requirements/test.txt
 
 [testenv:jy27]
 basepython = {toxinidir}/parts/jython2.7/bin/jython
 deps =
-	-r{toxinidir}/requirements-test.txt
+	-r{toxinidir}/requirements/test.txt
 
 [testenv:docs]
 changedir = {toxinidir}
 deps =
-	-r{toxinidir}/requirements-dev.txt
+	-r{toxinidir}/requirements/dev.txt
 whitelist_externals =
 	make
 commands =
