requirements: docs.txt

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
 [testenv:docs]
 changedir = {toxinidir}
 deps =
-	-r{toxinidir}/requirements/dev.txt
+	-r{toxinidir}/requirements/docs.txt
 whitelist_externals =
 	make
 commands =
