travis: allow to fail in pypy environment
현재 PyPy 환경에서는 배포본 문서를 해독할 수 없음.

Currently we cannot decrypt "Distribution Document" in PyPy environment.

See #155

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ matrix:
   allow_failures:
     - python: "2.7"
       env: TOXENV=jy27
+    - python: "pypy"
+      env: TOXENV=pypy
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libxml2-utils xsltproc
