--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,21 @@
 source-dir = docs/
 build-dir  = docs/.build
 all_files  = 1
+
+
+[extract_messages]
+sort-by-file = True
+copyright-holder = mete0r@sarangbang.or.kr
+msgid-bugs-address = mete0r@sarangbang.or.kr
+
+
+[init_catalog]
+output-dir = pyhwp/hwp5/locale
+
+
+[update_catalog]
+output-dir = pyhwp/hwp5/locale
+
+
+[compile_catalog]
+directory = pyhwp/hwp5/locale
