--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,9 @@ changedir = {envdir}
 commands =
 	zope-testrunner -vv --color --path={toxinidir}/pyhwp-tests --test-path={toxinidir}/pyhwp-tests --tests-pattern='^hwp5_tests$'
 	ln -sf {toxinidir}/samples
-	{toxinidir}/bin/clitest --prefix 3 {toxinidir}/pyhwp-tests/cli_tests/hwp5proc.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5odt.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5html.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5txt.txt
+	env LANG=C {toxinidir}/bin/clitest --prefix 3 {toxinidir}/pyhwp-tests/cli_tests/hwp5proc.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5odt.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5html.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5txt.txt
 whitelist_externals =
+	env
 	ln
 
 [testenv:pypy]
