--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@
 #
 docopt==0.6.2
 hypua2jamo==0.3
-olefile==0.44
+lxml==4.2.4 ; platform_python_implementation == "CPython"
+olefile==0.44 ; platform_python_implementation != "Jython"
+pycrypto==2.6.1 ; platform_python_implementation == "CPython" and platform_system != "Windows"
