--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,4 @@
+cryptography ; platform_python_implementation != "Jython"
 docopt >= 0.6
 hypua2jamo >= 0.4.4
 lxml ; platform_python_implementation == "CPython"
