--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,9 @@ envlist = docs,lint,py27,pypy,jy27
 [testenv]
 deps =
 	-r{toxinidir}/requirements/test.txt
-changedir = {envdir}
+changedir = {envtmpdir}
 commands =
-	zope-testrunner -vv --color --path={toxinidir}/pyhwp-tests --test-path={toxinidir}/pyhwp-tests --tests-pattern='^hwp5_tests$'
+	coverage run --parallel -m pytest {toxinidir}/pyhwp-tests
 	ln -sf {toxinidir}/samples
 	env LANG=C {toxinidir}/bin/clitest --prefix 3 {toxinidir}/pyhwp-tests/cli_tests/hwp5proc.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5odt.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5html.txt {toxinidir}/pyhwp-tests/cli_tests/hwp5txt.txt
 whitelist_externals =
