--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
     - python: "2.7"
       env: TOXENV=jy27
   allow_failures:
+    - python: "pypy"
+      env: TOXENV=pypy
     - python: "2.7"
       env: TOXENV=jy27
 before_install:
