--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ docopt==0.6.2
 enum34==1.1.6             # via cryptography
 hypua2jamo==0.4.4
 ipaddress==1.0.22         # via cryptography
-lxml==4.2.4 ; platform_python_implementation == "CPython"
+lxml==4.2.4 ; platform_python_implementation != "Jython"
 olefile==0.44 ; platform_python_implementation != "Jython"
 pycparser==2.19           # via cffi
 six==1.12.0               # via cryptography
