--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ matrix:
       env: TOXENV=py36
     - python: "3.7"
       env: TOXENV=py37
+      dist: xenial
+      sudo: yes
     - python: "pypy"
       env: TOXENV=pypy
     - python: "pypy3"
