--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ lxml==4.2.4 ; platform_python_implementation != "Jython"
 olefile==0.44 ; platform_python_implementation != "Jython"
 pycparser==2.19           # via cffi
 six==1.12.0               # via cryptography
+zope.interface==4.6.0
