--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -4,11 +4,14 @@ colorlog
 jip
 jupyter
 lxml
+notebook >= 5.7.8
 pip-tools >= 2.0.2
 pyside
 qtconsole
+requests >= 2.20.0
 restview
 tox >= 3.7.0
+urllib3 >= 1.24.2
 wheel
 zc.buildout >= 2.13.1
 zest.releaser
