--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,16 @@ matrix:
       env: TOXENV=lint
     - python: "2.7"
       env: TOXENV=py27
-    - python: "3.4"
-      env: TOXENV=py34
     - python: "3.5"
       env: TOXENV=py35
     - python: "3.6"
       env: TOXENV=py36
     - python: "3.7"
       env: TOXENV=py37
+      dist: xenial
+      sudo: yes
+    - python: "3.8"
+      env: TOXENV=py38
       dist: xenial
       sudo: yes
     - python: "pypy"
@@ -26,6 +28,10 @@ matrix:
     - python: "2.7"
       env: TOXENV=jy27
   allow_failures:
+    - python: "pypy"
+      env: TOXENV=pypy
+    - python: "pypy3"
+      env: TOXENV=pypy3
     - python: "2.7"
       env: TOXENV=jy27
 before_install:
