--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps =
 	-r{toxinidir}/requirements/test.txt
 changedir = {envtmpdir}
 commands =
-	coverage run --rcfile={toxinidir}/.coveragerc --parallel -m pytest {toxinidir}/tests
+	coverage run --rcfile={toxinidir}/.coveragerc --parallel -m unittest discover {toxinidir}/tests
 	ln -sf {toxinidir}/samples
 	env LANG=C {toxinidir}/bin/clitest --prefix 3 {toxinidir}/tests/cli_tests/hwp5proc.txt {toxinidir}/tests/cli_tests/hwp5odt.txt {toxinidir}/tests/cli_tests/hwp5html.txt {toxinidir}/tests/cli_tests/hwp5txt.txt
 whitelist_externals =
