requirements/dev: tox 4.4.11, requests 2.28.2

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,18 @@
 [tox]
+min_version = 4.4.11
 envlist = docs,lint,py27,py35,py36,py37,py38,pypy,pypy3,jy27
 
 [testenv]
 deps =
 	-r{toxinidir}/requirements/test.txt
 changedir = {envtmpdir}
+setenv =
+	COLUMNS=80
 commands =
 	coverage run --rcfile={toxinidir}/.coveragerc --parallel -m unittest discover {toxinidir}/tests
 	ln -sf {toxinidir}/samples
 	env LANG=C {toxinidir}/bin/clitest --prefix 3 {toxinidir}/tests/cli_tests/hwp5proc.txt {toxinidir}/tests/cli_tests/hwp5odt.txt {toxinidir}/tests/cli_tests/hwp5html.txt {toxinidir}/tests/cli_tests/hwp5txt.txt
-whitelist_externals =
+allowlist_externals =
 	env
 	ln
 
