--- a/requirements/docs.in
+++ b/requirements/docs.in
@@ -2,5 +2,5 @@ alabaster >= 0.7.10
 jinja2 >= 3.1.2
 repoze.sphinx.autointerface
 sphinx >= 1.5
-sphinx-argparse
+sphinx-argparse >= 0.4.0
 sphinx-intl
